--- a/master/website/board/templates/board/b_itemgrp.html
+++ b/master/website/board/templates/board/b_itemgrp.html
@@ -182,7 +182,7 @@
                                     <input type="text" class="form-control" grpid="{{ i.id }}" value="{{ i.itemgrp_nm }}" onchange="updateName(this)"/>
                                 </td>
                                 <td align="right">
-                                    <a class="btn btn-primary btn-sm" id="{{i.id}}" href="javascript:void(0);" onclick="delete_element(this)" title="Bootstrap 3 themes generator">삭제</a>
+                                    <a class="btn btn-default btn-sm" id="{{i.id}}" href="javascript:void(0);" onclick="delete_element(this)" title="Bootstrap 3 themes generator">삭제</a>
                                 </td>
                             </tr>
                             </tbody>
