--- a/master/website/board/templates/board/codemanage.html
+++ b/master/website/board/templates/board/codemanage.html
@@ -303,7 +303,7 @@
                                     {{ i.updt_dt }}
                                 </td>
                                 <td width="10%">
-                                    <a class="btn btn-primary btn-sm" id="{{i.id}}" href="javascript:void(0);" onclick="deleteType(this);" title="Bootstrap 3 themes generator">삭제</a>
+                                    <a class="btn btn-default btn-sm" id="{{i.id}}" href="javascript:void(0);" onclick="deleteType(this);" title="Bootstrap 3 themes generator">삭제</a>
                                 </td>
                             </tr>
                             </tbody>
@@ -399,7 +399,7 @@
                                         {{ j.updt_dt }}
                                     </td>
                                     <td width="10%">
-                                        <a class="btn btn-primary btn-sm" id="{{j.id}}" href="javascript:void(0);" onclick="deleteCode(this);" title="Bootstrap 3 themes generator">삭제</a>
+                                        <a class="btn btn-default btn-sm" id="{{j.id}}" href="javascript:void(0);" onclick="deleteCode(this);" title="Bootstrap 3 themes generator">삭제</a>
 
                                     </td>
                                 </tr>
