--- a/master/website/board/templates/board/b_bizunit.html
+++ b/master/website/board/templates/board/b_bizunit.html
@@ -2,104 +2,103 @@
 {% load static %}
 
 {% block scripts %}
-    {{ block.super }}
+{{ block.super }}
 
 
 {% endblock %}
 
 {% block body %}
 
-    {% include "navbar.html" %}
-    {% include "sidebar.html" %}
+{% include "navbar.html" %}
+{% include "sidebar.html" %}
 
-    <!--main content start-->
-    <section id="main-content">
-        <section class="wrapper">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h3 class="page-header"><i class="fa fa-table"></i> 사업부</h3>
-                </div>
+<!--main content start-->
+<section id="main-content">
+    <section class="wrapper">
+        <div class="row">
+            <div class="col-lg-12">
+                <h3 class="page-header"><i class="fa fa-table"></i> 사업부</h3>
             </div>
-        <div>
-<!--        <div style="border-top:solid 2px #888;">-->
-        <table>
-            <tr>
-                <td width="" align="center">사업부코드</td>
-                <td width="" align="center">사업부명</td>
-                <td width="" align="center">비고</td>
-                <td width="" align="center">등록</td>
-                </td>
-            </tr>
-                                  <tbody >
-                                    <tr>
-                                        <td>
-                                          <input type="text" id="bizunit_cd" value="" style="width:100px;" >
-
-                                      </td>
-                                       <td>
-                                          <input type="text" id="bizunit_nm" value="" >
-
-                                      </td>
-                                        <td>
-                                          <input type="text" id="bizunit_rmrk" value="" >
-
-                                      </td>
-                                        <td>
-                                            <button onclick="insert_element();" style="width: 50px">저장</button>
-                                        </td>
-                                    </tr>
-                                  </tbody>
-
-        </table>
         </div>
+        <div>
+            <table>
+                <tr>
+                    <td align="center">사업부코드</td>
+                    <td align="center">사업부명</td>
+                    <td align="center">비고</td>
+                    <td align="center">등록</td>
+                </tr>
+                <tbody >
+                <tr>
+                    <td>
+                        <input type="text" id="bizunit_cd" value="" class="form-control" >
 
-</div>
-            <div class="row">
-              <div class="col-lg-12" style="margin-top:15px">
+                    </td>
+                    <td>
+                        <input type="text" id="bizunit_nm" value="" class="form-control" >
+
+                    </td>
+                    <td>
+                        <input type="text" id="bizunit_rmrk" value="" class="form-control" >
+
+                    </td>
+                    <td>
+                        <button onclick="insert_element();" class="btn btn-primary btn-sm">저장</button>
+                    </td>
+                </tr>
+                </tbody>
+
+            </table>
+        </div>
+        <br>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
                 <section class="panel">
-                  <div class="table-responsive">
-                    {% if rsHeader %}
-                          <table class="table">
-                              <thead>
-                                <tr>
-                                    <th>사업부코드</th>
-                                    <th>사업부명</th>
-                                    <th>비고</th>
+                    <div class="table-responsive">
+                        {% if rsHeader %}
+                        <table class="table" width="100%">
+                            <thead>
+                            <tr>
+                                <th>사업부코드</th>
+                                <th>사업부명</th>
+                                <th>비고</th>
+                                <th></th>
+                                <th></th>
 
-<!--                                    <th>사용구분</th>-->
-                                </tr>
-                              </thead>
-                        {% for i in rsHeader %}
-                                  <tbody >
-                                    <tr>
-                                        <td width="15%">
-                                          {{ i.bizunit_cd }}
-                                      </td>
+                                <!--                                    <th>사용구분</th>-->
+                            </tr>
+                            </thead>
+                            {% for i in rsHeader %}
+                            <tbody >
+                            <tr>
+                                <td>
+                                    {{ i.bizunit_cd }}
+                                </td>
 
-                                      <td width="15%">
-                                          {{ i.bizunit_nm }}
-                                      </td>
-                                      <td width="15%">
-                                           <input type="text" class="bizunitrmrk" id="bizunitrmrk{{ i.id }}" value="{{ i.bizunit_rmrk }}" placeholder="bizunitrmrk"/>
-                                      </td>
-                                        <td width="5%" align="center" style="padding:5px 0;" >
-                    <td width="8%"><a class="btn btn-default btn-sm" value="{{i.id}}" href="javascript:void(0);" onclick="update_element(this);" title="Bootstrap 3 themes generator">수정</a></td>
-                    <td width="8%"><a class="btn btn-default btn-sm" id="{{i.id}}" href="javascript:void(0);" onclick="delete_element(this);" title="Bootstrap 3 themes generator">삭제</a></td>
-                </td>
+                                <td>
+                                    {{ i.bizunit_nm }}
+                                </td>
+                                <td>
+                                    <input type="text" class="bizunitrmrk form-control" id="bizunitrmrk{{ i.id }}" value="{{ i.bizunit_rmrk }}" placeholder="bizunitrmrk"/>
+                                </td>
+                                <td width="45%" align="right"><a class="btn btn-default btn-sm" value="{{i.id}}" href="javascript:void(0);" onclick="update_element(this);" title="Bootstrap 3 themes generator">수정</a></td>
+                                <td width="5%"><a class="btn btn-default btn-sm" id="{{i.id}}" href="javascript:void(0);" onclick="delete_element(this);" title="Bootstrap 3 themes generator">삭제</a></td>
+                                </td>
 
-                                    </tr>
-                                  </tbody>
-                              {% endfor %}
-                              </table>
-                      {% else %}
-                      <span>내용이 없습니다.</span>
-                      {% endif %}
-                  </div>
+                            </tr>
+                            </tbody>
+                            {% endfor %}
+                        </table>
+                        {% else %}
+                        <span>내용이 없습니다.</span>
+                        {% endif %}
+                    </div>
 
                 </section>
-              </div>
             </div>
-            <script>
+        </div>
+        <script>
         function getCookie(name) {
             var cookieValue = null;
             if (document.cookie && document.cookie !== '') {
@@ -222,8 +221,8 @@
         }
     </script>
 
-        </section>
-        <!--main content end-->
     </section>
-    <!-- container section start -->
+    <!--main content end-->
+</section>
+<!-- container section start -->
 {% endblock %}
